ad algorithm lowest common ancestor

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,4 +4,4 @@ project(leetcodeInCpp)
 set(CMAKE_CXX_STANDARD 11)
 aux_source_directory(./daily daily)
 aux_source_directory(./tree/easy easy)
-add_executable(leetcodeInCpp main.cpp ${daily} ${easy})
+add_executable(leetcodeInCpp main.cpp ${daily} ${easy} tree/easy/LowestCommonAncestor.h)
