--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,4 +4,5 @@ project(leetcodeInCpp)
 set(CMAKE_CXX_STANDARD 11)
 aux_source_directory(./daily daily)
 aux_source_directory(./tree/easy easy)
-add_executable(leetcodeInCpp main.cpp ${daily} ${easy} tree/easy/LowestCommonAncestor.h)
+aux_source_directory(./test test)
+add_executable(leetcodeInCpp main.cpp ${daily} ${easy} ${test} daily/MinimumIncrementToMakeArrayUnique.h HwInterview.h)
