add surface area of 3d shapes and hard dir

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,4 +5,5 @@ set(CMAKE_CXX_STANDARD 11)
 aux_source_directory(./daily daily)
 aux_source_directory(./tree/easy easy)
 aux_source_directory(./test test)
-add_executable(leetcodeInCpp main.cpp ${daily} ${easy} ${test} daily/MinimumIncrementToMakeArrayUnique.h HwInterview.h)
+aux_source_directory(./hard hard)
+add_executable(leetcodeInCpp main.cpp ${daily} ${easy} ${test} ${hard} HwInterview.h)
