--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,4 +6,4 @@ aux_source_directory(./daily daily)
 aux_source_directory(./tree/easy easy)
 aux_source_directory(./test test)
 aux_source_directory(./hard hard)
-add_executable(leetcodeInCpp main.cpp ${daily} ${easy} ${test} ${hard} HwInterview.h)
+add_executable(leetcodeInCpp main.cpp ${daily} ${easy} ${test} ${hard})
