--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,15 +6,13 @@ set(CMAKE_CXX_STANDARD 11)
 enable_testing()
 
 # add header dir
-include_directories(includes)
-include_directories(daily)
+include_directories(includes daily)
 
 # add sub dir
+add_subdirectory(daily)
 add_subdirectory(util)
 add_subdirectory(mytest)
-add_subdirectory(daily)
 
 
 # add library dir
-link_libraries(lib)
-
+add_dependencies(daily libutil)
