--- a/mytest/CMakeLists.txt
+++ b/mytest/CMakeLists.txt
@@ -1,7 +1,6 @@
 # add source files
 aux_source_directory(. SRCS)
 
-message(STATUS "......"  ${CMAKE_SOURCE_DIR}/includes)
 include_directories(${CMAKE_SOURCE_DIR}/includes)
 link_directories(${CMAKE_SOURCE_DIR}/lib)
 
@@ -10,4 +9,4 @@ add_executable(mytest ${SRCS})
 # add test
 add_test(NAME mytest COMMAND mytest)
 
-target_link_libraries(mytest PUBLIC gtest)
+target_link_libraries(mytest "gtest" "gtest_main")
