update CMakeLists.txt and add algorithm Coin

--- a/mytest/CMakeLists.txt
+++ b/mytest/CMakeLists.txt
@@ -2,11 +2,13 @@
 aux_source_directory(. SRCS)
 
 include_directories(${CMAKE_SOURCE_DIR}/includes)
+include_directories(${CMAKE_SOURCE_DIR}/daily)
+
 link_directories(${CMAKE_SOURCE_DIR}/lib)
 
 add_executable(mytest ${SRCS})
-
 # add test
 add_test(NAME mytest COMMAND mytest)
 
-target_link_libraries(mytest "gtest" "gtest_main")
+
+target_link_libraries(mytest daily "gtest" "gtest_main")
