--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,10 @@
 {
-    "C_Cpp.default.configurationProvider": "vector-of-bool.cmake-tools"
+    "C_Cpp.default.configurationProvider": "vector-of-bool.cmake-tools",
+    "files.associations": {
+        "*.tcc": "cpp",
+        "functional": "cpp",
+        "string_view": "cpp",
+        "istream": "cpp",
+        "limits": "cpp"
+    }
 }
