--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -34,13 +34,13 @@
             },
             "windows": { //windows的特定配置
                 "MIMode": "gdb", //指定使用msvc进行调试
-                "miDebuggerPath": "E:/x86_64-8.1.0-release-win32-seh-rt_v6-rev0/mingw64/bin/gdb.exe",
+                "miDebuggerPath": "E:/mingw64/bin/gdb.exe",
                 "program": "${workspaceFolder}/build/mytest/mytest.exe", //指定C/C++程序位置
                 "setupCommands": [
 
                     { "text": "-enable-pretty-printing", "description": "enable pretty printing", "ignoreFailures": true },
 
-                    { "text": "handle SIGPIPE nostop noprint pass", "description": "ignore SIGPIPE", "ignoreFailures": true }  
+                    { "text": "handle SIGPIPE nostop noprint pass", "description": "ignore SIGPIPE", "ignoreFailures": true }
                 ]
             }
         }
