--- a/mytest/CMakeLists.txt
+++ b/mytest/CMakeLists.txt
@@ -11,6 +11,7 @@ set(longest_sub_str LongestSubStr-test.cpp)
 set(max_sub_arr MaximumSubArr-test.cpp)
 set(jump_game_src JumpGameII-test.cpp)
 set(validbst_src ValidBst-test.cpp)
+set(mincosts_src MinCost4Tickets-test.cpp)
 
 # 最长不重复子串
 add_executable(lgstSubStr ${longest_sub_str})
@@ -29,3 +30,9 @@ target_link_libraries(jumpgame daily "gtest" "gtest_main")
 add_executable(validbst ${validbst_src})
 add_test(validbst validbst)
 target_link_libraries(validbst daily "gtest" "gtest_main")
+
+
+# 最低票价
+add_executable(mincosts ${mincosts_src})
+add_test(mincosts mincosts)
+target_link_libraries(mincosts daily "gtest" "gtest_main")
