--- a/mytest/CMakeLists.txt
+++ b/mytest/CMakeLists.txt
@@ -17,6 +17,12 @@ set(maxSquare_src MaximalSquare-test.cpp)
 set(sqrtx_src SqrtX-test.cpp)
 set(power_src PowerXN-test.cpp)
 set(minstack_src MinStack-test.cpp)
+set(levelorder_src LevelOrder-test.cpp)
+
+# level order
+add_executable(level ${levelorder_src})
+add_test( level level)
+target_link_libraries(level daily "gtest" "gtest_main")
 
 # min stack
 add_executable(minstack ${minstack_src})
