least recently used(LRU) Cache design

--- a/mytest/CMakeLists.txt
+++ b/mytest/CMakeLists.txt
@@ -28,6 +28,12 @@ set(vowels_src Vowels-test.cpp)
 set(longest_palindrome_src LongestPalindrome-test.cpp)
 set(construct_binarytree_i_src construct_binarytree_i_test.cc)
 set(minimum_window_substring_src minimum_window_substring_test.cc)
+set(lru_cache_src lru_cache_test.cc)
+
+# construct binary tree from preorder and inorder traversal
+add_executable(lru_cache ${lru_cache_src})
+add_test( lru_cache lru_cache)
+target_link_libraries(lru_cache daily "gtest" "gtest_main")
 
 # construct binary tree from preorder and inorder traversal
 add_executable(minimum_window_substring ${minimum_window_substring_src})
