kids with candies

--- a/mytest/CMakeLists.txt
+++ b/mytest/CMakeLists.txt
@@ -4,10 +4,14 @@ project(mytest)
 
 link_directories(${CMAKE_SOURCE_DIR}/lib)
 
+add_executable(kids_with_candies kids_with_candies_test.cc)
+target_link_libraries(kids_with_candies daily "gtest" "gtest_main")
+add_test(NAME kids_with_candies COMMAND kids_with_candies)
+
 # add_executable(rob rob_test.cc)
 # target_link_libraries(rob daily "gtest" "gtest_main")
 # add_test(NAME rob COMMAND rob)
 
-add_executable(symmetric_tree symmetric_tree_test.cc)
-target_link_libraries(symmetric_tree daily "gtest" "gtest_main")
-add_test(NAME symmetric_tree COMMAND symmetric_tree)
+# add_executable(symmetric_tree symmetric_tree_test.cc)
+# target_link_libraries(symmetric_tree daily "gtest" "gtest_main")
+# add_test(NAME symmetric_tree COMMAND symmetric_tree)
